app/blog/[blogId]/blogPost.module.css
@media (min-width: 1536px) {
    .container {
      max-width: 1536px;
      padding: 5rem;

    }
    .bio {
      padding-left: 15rem;
  padding-right: 15rem;
  padding-top: 5rem;
    }

  }
    
    /* 2xl */
    @media (max-width: 1536px) {
      .container {
        max-width: 1280px;
        padding: 5rem;

      }

      .bio {
        padding-left: 15rem;
    padding-right: 15rem;
    padding-top: 5rem;
      }

    
    }
    
    /* xl */
    @media (max-width: 1280px) {
      .container {
        max-width: 1024px;
      }

      .bio {
        padding-left: 15rem;
    padding-right: 15rem;
    padding-top: 5rem;
      }
    }
    
    /* lg */
    @media (max-width: 1024px) {
      .container {
        max-width: 768px;
      }

      .bio {
        padding-left: 10rem;
        padding-right: 10rem;
      }
    }
    
    /* md */
    @media (max-width: 768px) {
      .container {
        max-width: 640px;
        padding: 3rem;
      }

      .bio {
        padding-left: 7rem;
        padding-right: 7rem;
      }
      
    }
    
    /* sm */
    @media (max-width: 640px) {
      .container {
        max-width: 475px;
        padding: 2rem;
      }
      
    }

    @media (max-width: 475px) {
      .container {
        width: 100%;
      }
      
    }

.container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    background-color: var(--body-bg-colour);
}

.blogTitle {
    align-self: flex-end;
    margin-bottom: 3rem;
}

.article {
    line-height: 1.5;
    columns: 4 250px;
    margin-bottom: 3rem;
}

.article p {
    margin-top: 1rem;
}

.article p:first-child {
    margin-top: 0px;
    font-style: italic;
    font-size: 1.1em;
}

.entryPageDate {
    font-style: italic;
    margin-bottom: 2rem;
}

.bio {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    border-top: 1px var(--blog-profile-border) solid;
    text-align: center;
    align-self: center;
}

.bio p:first-child {
    font-size: 3em;
}

.bio p:nth-child(2) {
    font-weight: 900;

}

.more {
    border-radius: 30px;
    border: none;
    background-color: var(--button-colour);
    color: var(--button-text);
    font-size: 1rem;
    font-weight: 200;
    margin-bottom: 3rem;
    max-width: 7.5rem;
    max-height: 3rem;
    padding: 1.25rem;
    display: flex;
    align-items: center;
    justify-content: center;

}

